# BillardProjet

./: .gitignore  CMakeLists.txt
include/: Boule.hpp  Renderer.hpp  Table.hpp  vector2D.hpp
src/: Boule.cpp  Renderer.cpp  Table.cpp  main.cpp  vector2D.cpp
tests/: test_collision.cpp  test_math.cpp
